# BackEnd/docs/swagger.yaml
@@ -141,7 +141,7 @@ paths:
       summary: Add Course
       tags:
       - Course
-  /Course/get-course/{id}:
+  /Course/get-course-details/{id}:
     get:
       consumes:
       - application/json
@@ -187,6 +187,82 @@ paths:
       summary: Get All Courses
       tags:
       - Course
+  /bookmarks/add-bookMark/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Adds a bookmark for a specified course by the authenticated user
+      parameters:
+      - description: Course ID
+        example: '"123e4567-e89b-12d3-a456-426614174000"'
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Unauthorized
+        "404":
+          description: Course not found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Add a bookmark
+      tags:
+      - Bookmarks
+  /bookmarks/get-bookMarks:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves all bookmarks for the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Get user's bookmarks
+      tags:
+      - Bookmarks
+  /bookmarks/remove-bookMark/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Removes a bookmark for a specified course by the authenticated
+        user
+      parameters:
+      - description: Course ID
+        example: '"123e4567-e89b-12d3-a456-426614174000"'
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Unauthorized
+        "404":
+          description: Course not found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Remove a bookmark
+      tags:
+      - Bookmarks
   /mentor/get-mentors:
     get:
       consumes:
